Added custom font support

--- a/src/Stacklands-NewLanguageLoader.csproj
+++ b/src/Stacklands-NewLanguageLoader.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	  <TargetFramework>netstandard2.1</TargetFramework>
@@ -6,7 +6,7 @@
 	  <ModDeployDir>%localappdata%low\sokpop\Stacklands\Mods</ModDeployDir>
     <GameDir Condition="'$(GameDir)' == ''">C:\Program Files (x86)\Steam\steamapps\common\Stacklands\</GameDir>
     <RootNamespace>$(MSBuildProjectName.Replace("-", "_"))</RootNamespace>
-	  <Version>1.1.1</Version>
+	  <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,13 +18,16 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>D:\Games\Steam\steamapps\common\Stacklands\Stacklands_Data\Managed\Newtonsoft.Json.dll</HintPath>
+      <HintPath>$(GameDir)\Stacklands_Data\Managed\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SokLoc">
-      <HintPath>D:\Games\Steam\steamapps\common\Stacklands\Stacklands_Data\Managed\SokLoc.dll</HintPath>
+      <HintPath>$(GameDir)\Stacklands_Data\Managed\SokLoc.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>D:\Games\Steam\steamapps\common\Stacklands\Stacklands_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+      <HintPath>$(GameDir)\Stacklands_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.AssetBundleModule">
+      <HintPath>$(GameDir)\Stacklands_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>$(GameDir)\Stacklands_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
